# aioaws

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  aws_test_key_permissions.json  aws_test_role_permissions.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: ci.yml
aioaws/: __init__.py  _types.py  _utils.py  config.py  core.py  dynamodb.py  s3.py  ses.py  sns.py  sqs.py  testing.py  utils.py  version.py
requirements/: all.txt  linting.in  linting.txt  pyproject.txt  tests.in  tests.txt
tests/: check_tag.py  conftest.py  dummy_server.py  requirements-linting.txt  requirements.txt  test_dynamodb.py  test_s3.py  test_ses.py  test_sqs.py  test_utils.py
